setting config example

--- a/CityInfo.API/appSettings.json
+++ b/CityInfo.API/appSettings.json
@@ -2,5 +2,8 @@
   "owner" : {
     "name": "John Smith",
     "mail": "jsmith@corp.com" 
+  },
+  "ConnectionStrings": {
+    "CityDB": "Server=.\\SQL2014;Database=CityInfo;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
